source/metacall/include/metacall/metacall.h

/* -- Forward Declarations -- */

struct metacall_initialize_configuration_type;
/* -- Type Definitions -- */

struct metacall_initialize_configuration_type
{
	const char *tag; /* Tag referring to the loader */
	void *options;	 /* Value of type Map that will be merged into the configuration of the loader */
};
/* -- Methods -- */

/**
*  @brief
*    Returns default serializer used by MetaCall
*
*  @return
*    Name of the serializer to be used with serialization methods
*/
METACALL_API const char *metacall_serial(void);
/**
*  @brief
*    Disables MetaCall logs, must be called before @metacall_initialize.
*
*   When initializing MetaCall, it initializes a default logs to stdout
*   if none was defined. If you want to benchmark or simply disable this
*   default logs, you can call to this function before @metacall_initialize.
*/
METACALL_API void metacall_log_null(void);
/**
*  @brief
*    Flags to be set in MetaCall library
*
*  @param[in] flags
*    Combination of flags referring to definitions METACALL_FLAGS_*
*/
METACALL_API void metacall_flags(int flags);
/**
*  @brief
*    Initialize MetaCall library
*
*  @return
*    Zero if success, different from zero otherwise
*/
METACALL_API int metacall_initialize(void);
/**
*  @brief
*    Initialize MetaCall library with configuration arguments
*
*  @param[in] initialize_config
*    Extension of the script to be loaded in memory with data to be injected
*
*  @return
*    Zero if success, different from zero otherwise
*/
METACALL_API int metacall_initialize_ex(struct metacall_initialize_configuration_type initialize_config[]);
/**
*  @brief
*    Initialize MetaCall application arguments
*
*  @param[in] argc
*    Number of additional parameters to be passed to the runtime when initializing
*
*  @param[in] argv
*    Additional parameters to be passed to the runtime when initializing (when using MetaCall as an application)
*/
METACALL_API void metacall_initialize_args(int argc, char *argv[]);
/**
*  @brief
*    Get the number of arguments in which MetaCall was initialized
*
*  @return
*    An integer equal or greater than zero
*/
METACALL_API int metacall_argc(void);
/**
*  @brief
*    Get the arguments in which MetaCall was initialized
*
*  @return
*    A pointer to an array of strings with the additional arguments
*/
METACALL_API char **metacall_argv(void);
/**
*  @brief
*    Check if script context is loaded by @tag
*
*  @param[in] tag
*    Extension of the script (if tag is NULL, it returns the status of the whole MetaCall instance)
*
*  @return
*    Zero if context is initialized, different from zero otherwise
*/
METACALL_API int metacall_is_initialized(const char *tag);
/**
*  @brief
*    Amount of function call arguments supported by MetaCall
*
*  @return
*    Number of arguments supported
*/
METACALL_API size_t metacall_args_size(void);
/**
*  @brief
*    Set a execution path defined by @path to the extension script @tag
*
*  @param[in] tag
*    Extension of the script
*
*  @param[in] path
*    Path to be loaded
*
*  @return
*    Zero if success, different from zero otherwise
*/
METACALL_API int metacall_execution_path(const char *tag, const char *path);
/**
*  @brief
*    Set a execution path defined by @path to the extension script @tag with length
*
*  @param[in] tag
*    Extension of the script
*
*  @param[in] tag_length
*    Length of the extension of the tag
*
*  @param[in] path
*    Path to be loaded
*
*  @param[in] path_length
*    Length of the path
*
*  @return
*    Zero if success, different from zero otherwise
*/
METACALL_API int metacall_execution_path_s(const char *tag, size_t tag_length, const char *path, size_t path_length);
/**
*  @brief
*    Get the value contained by throwable object @th
*
*  @param[in] th
*    Pointer to the throwable object
*
*  @return
*    Pointer to the value inside of the throwable or NULL in case of error
*/
METACALL_API void *metacall_throwable_value(void *th);
/**
*  @brief
*    Provide information about all loaded objects
*
*  @param[out] size
*    Size in bytes of return buffer
*
*  @param[in] allocator
*    Pointer to allocator will allocate the string
*
*  @return
*    String containing introspection information
*/
METACALL_API char *metacall_inspect(size_t *size, void *allocator);
/**
*  @brief
*    Provide information about all loaded objects as a value
*
*  @return
*    Value containing introspection information
*/
METACALL_API void *metacall_inspect_value(void);
/**
*  @brief
*    Convert the value @v to serialized string
*
*  @param[in] name
*    Name of the serial to be used
*
*  @param[in] v
*    Reference to the value
*
*  @param[out] size
*    Size of new allocated string
*
*  @param[in] allocator
*    Pointer to allocator will allocate the string
*
*  @return
*    New allocated string containing stringified value
*/
METACALL_API char *metacall_serialize(const char *name, void *v, size_t *size, void *allocator);
/**
*  @brief
*    Convert the string @buffer to value
*
*  @param[in] name
*    Name of the serial to be used
*
*  @param[in] buffer
*    String to be deserialized
*
*  @param[in] size
*    Size of string @buffer
*
*  @param[in] allocator
*    Pointer to allocator will allocate the value
*
*  @return
*    New allocated value representing the string (must be freed)
*/
METACALL_API void *metacall_deserialize(const char *name, const char *buffer, size_t size, void *allocator);
/**
*  @brief
*    Clear handle from memory and unload related resources
*
*  @param[in] handle
*    Reference to the handle to be unloaded
*
*  @return
*    Zero if success, different from zero otherwise
*/
METACALL_API int metacall_clear(void *handle);
/**
*  @brief
*    Get the plugin extension handle to be used for loading plugins
*
*  @return
*    Pointer to the extension handle, or null if it failed to load
*/
METACALL_API void *metacall_plugin_extension(void);
/**
*  @brief
*    Get the handle containing all the functionality of the plugins from core
*
*  @return
*    Pointer to the core plugin handle, or null if it failed to load
*/
METACALL_API void *metacall_plugin_core(void);
/**
*  @brief
*    Get the plugin extension path to be used for accessing the plugins folder
*
*  @return
*    String containing the core plugin path, or null if it failed to load the plugin extension
*/
METACALL_API const char *metacall_plugin_path(void);
/**
*  @brief
*    Destroy MetaCall library
*/
METACALL_API void metacall_destroy(void);